# sqlviz

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: inference_contract.md
docs/architecture/: sqlviz-contract-policy.md  sqlviz-doc1-vision-philosophy-v0.1.0.md  sqlviz-doc10-v02-construction-plan-v0.1.0.md  sqlviz-doc11-filter-engine-roadmap-v0.1.0.md  sqlviz-doc2-modes-cli-v0.2.0.md  sqlviz-doc3-technical-stack-v0.2.2.md  sqlviz-doc4-mathematical-foundations-v0.1.3.md  sqlviz-doc5-inference-engine-architecture-v0.1.0.md  sqlviz-doc6-ui-design-system-v0.1.0.md  sqlviz-doc7-security-roles-v0.1.0.md  sqlviz-doc8-construction-plan-v0.1.0.md  sqlviz-doc9-cognitive-bi-vision-v0.1.0.md  sqlviz-roadmap-v02x.md  sqlviz-roadmap.md  sqlviz-ux-dashboard-editing-v1.0.md
docs/qa/: phase7-qa-checklist.md
scripts/: bump_version.py
